@@ -1,5 +1,8 @@
 2014-09-29  Peter Stephenson  <p.stephenson@samsung.com>
 
+	* users/19183: Src/hist.c: handle unlikely error case with
+	fdopen() better.
+
 	* 33276: Src/params.c, Src/zsh.h: safer import of numerical
 	variables from environment.
 
